--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Craig Coles",
   "license": "MIT",
   "dependencies": {
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "koa": "^2.5.1",
     "nodemon": "^1.17.5",
@@ -16,12 +18,17 @@
   },
   "scripts": {
     "babel-node": "babel-node --presets es2015,stage-2",
-    "dev": "nodemon --exec yarn run babel-node -- src/app.js"
+    "dev": "nodemon --exec yarn run babel-node -- src/server/index.js",
+    "webpack": "webpack --mode development",
+    "build-server": "babel src -d dist --presets es2015,stage-2",
+    "serve": "node dist/server/index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
   }
 }
