--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "koa": "^2.5.1",
+    "koa-helmet": "^4.0.0",
     "nodemon": "^1.17.5",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "babel-node": "babel-node --presets es2015,stage-2",
-    "dev": "nodemon --exec yarn run babel-node -- src/server/index.js",
-    "webpack": "webpack --mode development",
+    "dev": "nodemon --exec yarn run babel-node -- src/server/index.js webpack",
+    "webpack": "webpack --mode development --watch",
     "build-server": "babel src -d dist --presets es2015,stage-2",
     "serve": "node dist/server/index.js"
   },
