--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "koa": "^2.5.1",
+    "koa-convert": "^1.2.0",
     "koa-helmet": "^4.0.0",
+    "koa-mount": "^3.0.0",
+    "koa-static": "^5.0.0",
     "nodemon": "^1.17.5",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -21,7 +24,7 @@
   },
   "scripts": {
     "babel-node": "babel-node --presets es2015,stage-2",
-    "dev": "nodemon --exec yarn run babel-node -- src/server/index.js webpack",
+    "dev": "nodemon --exec yarn run babel-node -- src/server/index.js && npm run webpack --watch",
     "webpack": "webpack --mode development --watch",
     "build-server": "babel src -d dist --presets es2015,stage-2",
     "serve": "node dist/server/index.js"
