--- a/package.json
+++ b/package.json
@@ -14,20 +14,26 @@
     "koa-helmet": "^4.0.0",
     "koa-mount": "^3.0.0",
     "koa-static": "^5.0.0",
+    "koa-webpack": "^5.0.2",
+    "koa-webpack-hot": "^1.0.1",
+    "koa-webpack-middleware": "^1.0.7",
     "nodemon": "^1.17.5",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   },
   "scripts": {
+    "clean": "rm -rf ./src/build",
     "babel-node": "babel-node --presets es2015,stage-2",
-    "dev": "nodemon --exec yarn run babel-node -- src/server/index.js && npm run webpack --watch",
-    "webpack": "webpack --mode development --watch",
-    "build-server": "babel src -d dist --presets es2015,stage-2",
-    "serve": "node dist/server/index.js"
+    "dev": "nodemon --exec yarn run babel-node -- src/server/index.js | npm run webpack",
+    "webpack": "npm run clean && `npm bin`/webpack --mode development --watch",
+    "build-server": "babel src -d build --presets es2015,stage-2",
+    "serve": "node build/server/index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
